<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:text="加密文件"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/encrypt_file_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:focusable="false"
                android:hint="选择要加密的文件"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/select_encrypt_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ciphertext_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:focusable="false"
                android:hint="@string/select_ciphertext_path"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/select_ciphertext_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_encrypt_policy"
            android:textSize="14sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/execute_encrypt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/encrypt"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>
</layout>


