<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.vontroy.pku_ss_cloud_class.user_account.register.RegActivity">

        <com.github.siyamed.shapeimageview.CircularImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_24"
            android:src="@drawable/logo_login"
            app:siBorderColor="@color/bg_grey"
            app:siBorderWidth="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="@color/pku"
            android:text="软微云课堂" />

        <!-- LoginResult progress -->

        <ScrollView
            android:id="@+id/reg_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/white">

                    <EditText
                        android:id="@+id/origin_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/origin_pwd"
                        android:imeActionId="@+id/reg"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textStyle="normal" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/white">

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_pwd"
                        android:imeActionId="@+id/reg"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/white">

                    <EditText
                        android:id="@+id/retyped_new_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/retype_new_pwd"
                        android:imeActionId="@+id/reg"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textStyle="normal" />
                </LinearLayout>


                <Button
                    android:id="@+id/reset"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_btn"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:text="@string/reset"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

        <ProgressBar

            android:id="@+id/reg_process"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

    </LinearLayout>

</layout>